# stradegy

./: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.nas  Dockerfile  NAS_DEPLOYMENT.md  NEW_DATA_SOURCES.md  NEXT_SESSION.md  README.md  RELEASE.md  UAT_REPORT_2026-05-18.md  USER_JOURNEY.md  cleanup-buildx.sh  cleanup-docker.sh  deploy.sh  docker-compose.simple.yml  docker-compose.vm.yml  docker-compose.yml  fix-and-deploy.sh  fix-nas-ui-deep.sh  fix-nas-ui.sh  index.html  manifest.json  manifest.webmanifest  remove-stradegy.sh  setup-cloudflare-tunnel.sh  setup-vm.sh  start.sh  sw.js
assets/: index-DQgGxn-5.css  (+1 more)
backend/: discord_diagnose.py  pyproject.toml
backend/scripts/: backfill.py  run_backtest.py  simulate_paper_trade.py  test_incremental.py
backend/src/stradegy/: config.py  db.py  main.py
backend/src/stradegy/engine/: performance.py
backend/src/stradegy/engine/alerts/: whatsapp_alerts.py
backend/src/stradegy/engine/backtest/: overnight_backtest.py  walk_forward.py
backend/src/stradegy/engine/data/: fetcher.py  store.py  ticker_metadata.py  ticker_universe.py
backend/src/stradegy/engine/execution/: alpaca_client.py
backend/tests/: conftest.py  test_alpaca_client.py  test_backtest_api.py  test_config.py  test_data_pipeline.py  test_discord_alerts.py  test_discord_reporter.py  test_discord_scanner.py  test_reddit_scanner.py  test_research_db.py  test_research_integration.py  test_research_models.py  test_risk_manager.py  test_self_improvement.py  test_sentiment.py  test_smoke.py  test_strategy_reviewer.py  test_walk_forward.py
(+117 files in other folders)
