[project]
name = "stradegy"
version = "2.0.0"
description = "Autonomous trading bot — research, backtest, trade, improve"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "alpaca-py>=0.43.0",
    "yfinance>=0.2.49",
    "finnhub-python>=2.4.28",
    "edgartools>=4.6.0",
    "greenlet>=3.0.0",
    "vectorbt>=0.28.0",
    "pandas-ta>=0.3.14b",
    "ta-lib>=0.6.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "vader-sentiment>=3.2.1",
    "praw>=7.8.0",
    "optuna>=4.0.0",
    "apscheduler>=3.10.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
